[package]
name = "llama_link"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A llama.cpp server interface"
repository = "https://github.com/mcmah309/llama_link"
readme = "README.md"

[dependencies]
reqwest = {version = "0.12.0", features = ["json"] }
tokio = {version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
bon = "3"